# chessAI

./: .gitignore  Cargo.toml  README.md
benches/: bishop_generation.rs  pawn_generation.rs  queen_generation.rs  rook_generation.rs
chess-lib/: Cargo.toml
chess-lib/benches/: king_generation.rs  knight_generation.rs  pawn_generation.rs  rook_generation.rs
chess-lib/chess-lib/tests/__snapshots__/: bishop_move_generation.rs.snap  castling_move_generation.rs.snap  default_board_generation.rs.snap  king_move_generation.rs.snap  knight_move_generation.rs.snap  pawn_move_generation.rs.snap  queen_move_generation.rs.snap  rook_move_generation.rs.snap
chess-lib/src/: lib.rs  test_moves.rs
chess-lib/src/chess/: bitboard.rs  bitposition.rs  chess_move.rs  errors.rs  mod.rs  piece.rs  piece_type.rs  player.rs  rank_file.rs
chess-lib/src/chess/board/: attacks.rs  mod.rs  pawn.rs
chess-lib/src/chess/move_generator/: mod.rs  sanity_checks.rs
chess-lib/tests/: bishop_move_generation.rs  castling_move_generation.rs  default_board_generation.rs  king_move_generation.rs  knight_move_generation.rs  pawn_move_generation.rs  queen_move_generation.rs  rook_move_generation.rs
chess-web/: .gitignore  Cargo.toml
chess-web/src/: lib.rs
minimax/: Cargo.toml
minimax/src/: lib.rs  tictactoe.rs
src/: alpha_beta.rs  bitboard.rs  bitposition.rs  board.rs  fixtures.rs  main.rs  move_search.rs  moves.rs  piece.rs  position.rs  rank_file.rs  test_moves.rs  utils.rs
src/board/: board.rs  chess_move.rs  errors.rs  mod.rs  move_generator.rs  move_pieces.rs  piece.rs  piece_type.rs  player.rs  score.rs  tests.rs
src/board/__snapshots__/: move_pieces.rs.snap
src/board/move_generator/: mod.rs  pawn.rs
src/board/move_generator/__snapshots__/: pawn.rs.snap
src/chess/: bitboard.rs  bitposition.rs  board.rs  chess_move.rs  errors.rs  mod.rs  piece.rs  piece_type.rs  rank_file.rs
src/chess/board/: attacks.rs  king_check.rs  mod.rs  pawn.rs  pieces.rs
src/chess/move_generator/: bishop.rs  king_check.rs  knight.rs  mod.rs  pawn.rs  pieces.rs  queen.rs  rook.rs
src/chess/move_generator/__snapshots__/: pawn.rs.snap
src/search/: alpha_beta.rs  minimax.rs  mod.rs
tests/: bishop_move_generation.rs  castling_move_generation.rs  default_board_generation.rs  knight_move_generation.rs  pawn_move_generation.rs
tests/__snapshots__/: bishop_move_generation.rs.snap  castling_move_generation.rs.snap  default_board_generation.rs.snap  king_move_generation.rs.snap  knight_move_generation.rs.snap  pawn_move_generation.rs.snap  queen_move_generation.rs.snap  rook_move_generation.rs.snap
web-test/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web-test/src/: main.ts
