[package]
name = "chess"
version = "0.1.0"
authors = ["Jacob Gardner <jacob.v.gardner@gmail.com>"]
edition = "2018"

[features]
strict = []

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
num = "0.2"
failure = "0.1.2"
snapshot = { git = "https://github.com/jacobgardner/snapshot-rs.git", branch = "hjson" }