[package]
name = "chess"
version = "0.1.0"
authors = ["Jacob Gardner <jacob.v.gardner@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/main.rs"

[features]
strict = []

[dependencies]
failure = "^0.1.2"
num = "^0.2"
num-derive = "^0.2"
num-traits = "^0.2"
snapshot = { git = "https://github.com/jacobgardner/snapshot-rs.git", branch = "hjson" }
uncover = "^0.1.1"

[dev-dependencies]
criterion = "^0.2.5"

[[bench]]
name = "pawn_generation"
harness = false