[package]
name = "chess-web"
version = "0.1.0"
authors = ["Jacob Gardner <jacob.v.gardner@gmail.com>"]
edition = "2018"
description = "Chess for web"
repository = "https://github.com/jacobgardner/chessAI"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
seed = "0.2"
lazy_static = "1.2"
chess = { path = "../chess-lib" }