[package]
name = "chess-web"
version = "0.1.0"
authors = ["Jacob Gardner <jacob.v.gardner@gmail.com>"]
edition = "2018"
description = "Chess for web"
repository = "https://github.com/jacobgardner/chessAI"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
lazy_static = "1.2"
chess = { path = "../chess-lib" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]